--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,8 +2,9 @@
   position: relative;
   z-index: 1;
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
+  gap: 16px;
   width: 100%;
   height: 60px;
   padding-inline: 16px;
@@ -11,7 +12,7 @@
   background-color: var(--color-background);
 
   .logo {
-    width: 36px;
+    width: 42px;
     cursor: pointer;
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
@@ -20,5 +21,9 @@
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
+  }
+
+  .menu {
+    margin-left: auto;
   }
 }
